feat: removes keycloak [x] adds postgres for employee [x] adds gRPC resources (searchEmployees, UpdateEmployee) [x] removes auth resources (keycloak) [x] refactor entities
