# domain/entity/employee.go
@@ -4,60 +4,49 @@ import (
 	"time"
 
 	"github.com/asaskevich/govalidator"
-	pisvalidatior "github.com/patricksferraz/pisvalidator"
+	"github.com/paemuri/brdoc"
+	pisvalidator "github.com/patricksferraz/pisvalidator"
 	uuid "github.com/satori/go.uuid"
+	"go.mongodb.org/mongo-driver/bson/primitive"
 )
 
 func init() {
 	govalidator.TagMap["pis"] = govalidator.Validator(func(str string) bool {
-		return pisvalidatior.ValidatePis(str)
+		return pisvalidator.ValidatePis(str)
+	})
+
+	govalidator.TagMap["cpf"] = govalidator.Validator(func(str string) bool {
+		return brdoc.IsCPF(str)
 	})
 
 	govalidator.SetFieldsRequiredByDefault(true)
 }
 
-type PasswordInfo struct {
-	Password  string
-	Temporary bool
-}
-
-func NewPasswordInfo(password string, temporary bool) (*PasswordInfo, error) {
-	pass := &PasswordInfo{
-		Password:  password,
-		Temporary: temporary,
-	}
-	return pass, nil
-}
-
 type Employee struct {
-	Base          `json:",inline" valid:"required"`
-	Username      string `json:"username,omitempty" valid:"required"`
-	FirstName     string `json:"first_name,omitempty" valid:"required"`
-	LastName      string `json:"last_name,omitempty" valid:"required"`
-	Email         string `json:"email,omitempty" valid:"email"`
-	Pis           string `json:"pis,omitempty" attr:"pis" valid:"pis"`
-	Enabled       bool   `json:"enabled,omitempty" valid:"-"`
-	EmailVerified bool   `json:"email_verified,omitempty" valid:"-"`
+	Base      `json:",inline" valid:"required"`
+	FirstName string  `json:"first_name,omitempty" gorm:"column:first_name;type:varchar(50);not null" valid:"required"`
+	LastName  string  `json:"last_name,omitempty" gorm:"column:last_name;type:varchar(255);not null" valid:"required"`
+	Email     string  `json:"email,omitempty" gorm:"column:email;type:varchar(255);not null" valid:"email"`
+	Pis       string  `json:"pis,omitempty" gorm:"column:pis;type:varchar(25);unique" valid:"pis"`
+	Cpf       string  `json:"cpf,omitempty" gorm:"column:pis;type:varchar(25);unique" valid:"cpf"`
+	Enabled   bool    `json:"enabled,omitempty" valid:"-"`
+	Token     *string `json:"-" gorm:"column:token;not null" bson:"token" valid:"-"`
 }
 
-func NewEmployee(id, username, firstName, lastName, email, pis string, enabled, emailVerified bool) (*Employee, error) {
+func NewEmployee(firstName, lastName, email, pis, cpf string) (*Employee, error) {
 
+	token := primitive.NewObjectID().Hex()
 	employee := &Employee{
-		Username:      username,
-		FirstName:     firstName,
-		LastName:      lastName,
-		Email:         email,
-		Pis:           pis,
-		Enabled:       enabled,
-		EmailVerified: emailVerified,
+		FirstName: firstName,
+		LastName:  lastName,
+		Email:     email,
+		Pis:       pis,
+		Cpf:       cpf,
+		Enabled:   true,
+		Token:     &token,
 	}
+	employee.ID = uuid.NewV4().String()
 	employee.CreatedAt = time.Now()
-
-	if id == "" {
-		employee.ID = uuid.NewV4().String()
-	} else {
-		employee.ID = id
-	}
 
 	if err := employee.isValid(); err != nil {
 		return nil, err
@@ -73,12 +62,35 @@ func (e *Employee) isValid() error {
 
 func (e *Employee) Enable() error {
 	e.Enabled = true
+	e.UpdatedAt = time.Now()
 	err := e.isValid()
 	return err
 }
 
 func (e *Employee) Disable() error {
 	e.Enabled = false
+	e.UpdatedAt = time.Now()
+	err := e.isValid()
+	return err
+}
+
+func (e *Employee) SetFirstName(firstName string) error {
+	e.FirstName = firstName
+	e.UpdatedAt = time.Now()
+	err := e.isValid()
+	return err
+}
+
+func (e *Employee) SetLastName(lastName string) error {
+	e.LastName = lastName
+	e.UpdatedAt = time.Now()
+	err := e.isValid()
+	return err
+}
+
+func (e *Employee) SetEmail(email string) error {
+	e.Email = email
+	e.UpdatedAt = time.Now()
 	err := e.isValid()
 	return err
 }
