# infrastructure/repository/repository.go
@@ -2,169 +2,77 @@ package repository
 
 import (
 	"context"
-	"time"
+	"fmt"
 
-	"github.com/Nerzal/gocloak/v8"
 	"github.com/c-4u/employee-service/domain/entity"
+	"github.com/c-4u/employee-service/infrastructure/db"
 	"github.com/c-4u/employee-service/infrastructure/external"
-	"github.com/c-4u/employee-service/utils"
 	ckafka "github.com/confluentinc/confluent-kafka-go/kafka"
 )
 
 type Repository struct {
-	Keycloak *external.Keycloak
-	Kafka    *external.Kafka
+	P     *db.Postgres
+	Kafka *external.Kafka
 }
 
-func NewRepository(keycloak *external.Keycloak, kafka *external.Kafka) *Repository {
+func NewRepository(postgres *db.Postgres, kafka *external.Kafka) *Repository {
 	return &Repository{
-		Keycloak: keycloak,
-		Kafka:    kafka,
+		P:     postgres,
+		Kafka: kafka,
 	}
 }
 
 func (r *Repository) CreateEmployee(ctx context.Context, employee *entity.Employee) error {
-	user := gocloak.User{
-		Username:      &employee.Username,
-		FirstName:     &employee.FirstName,
-		LastName:      &employee.LastName,
-		Email:         &employee.Email,
-		Enabled:       &employee.Enabled,
-		EmailVerified: &employee.EmailVerified,
-	}
-	user.Attributes = utils.StructToAttr(employee)
-
-	token, err := r.Keycloak.Client.LoginAdmin(ctx, r.Keycloak.Username, r.Keycloak.Password, r.Keycloak.Realm)
-	if err != nil {
-		return err
-	}
-	defer r.Keycloak.Client.LogoutUserSession(ctx, token.AccessToken, r.Keycloak.Realm, token.SessionState)
-
-	employeeID, err := r.Keycloak.Client.CreateUser(ctx, token.AccessToken, r.Keycloak.Realm, user)
-	if err != nil {
-		return err
-	}
-	employee.ID = employeeID
-
-	return nil
+	err := r.P.Db.Create(employee).Error
+	return err
 }
 
 func (r *Repository) FindEmployee(ctx context.Context, id string) (*entity.Employee, error) {
-	token, err := r.Keycloak.Client.LoginAdmin(ctx, r.Keycloak.Username, r.Keycloak.Password, r.Keycloak.Realm)
-	if err != nil {
-		return nil, err
-	}
-	defer r.Keycloak.Client.LogoutUserSession(ctx, token.AccessToken, r.Keycloak.Realm, token.SessionState)
+	var employee entity.Employee
+	r.P.Db.First(&employee, "id = ?", id)
 
-	e, err := r.Keycloak.Client.GetUserByID(ctx, token.AccessToken, r.Keycloak.Realm, id)
-	if err != nil {
-		return nil, err
+	if employee.ID == "" {
+		return nil, fmt.Errorf("no employee found")
 	}
 
-	var pis string
-	if e.Attributes != nil {
-		pis = (*e.Attributes)["pis"][0]
-	}
-
-	employee := &entity.Employee{
-		Username:      *e.Username,
-		FirstName:     *e.FirstName,
-		LastName:      *e.LastName,
-		Email:         *e.Email,
-		Enabled:       *e.Enabled,
-		EmailVerified: *e.EmailVerified,
-		Pis:           pis,
-	}
-	employee.ID = *e.ID
-	employee.CreatedAt = time.Unix(0, *e.CreatedTimestamp*int64(time.Millisecond))
-
-	return employee, nil
+	return &employee, nil
 }
 
-func (r *Repository) SetPassword(ctx context.Context, employeeID string, pass *entity.PasswordInfo) error {
-	token, err := r.Keycloak.Client.LoginAdmin(ctx, r.Keycloak.Username, r.Keycloak.Password, r.Keycloak.Realm)
-	if err != nil {
-		return err
-	}
-	defer r.Keycloak.Client.LogoutUserSession(ctx, token.AccessToken, r.Keycloak.Realm, token.SessionState)
-
-	err = r.Keycloak.Client.SetPassword(ctx, token.AccessToken, employeeID, r.Keycloak.Realm, pass.Password, pass.Temporary)
-	if err != nil {
-		return err
-	}
-
-	return nil
-}
-
-func (r *Repository) SearchEmployees(ctx context.Context, filter *entity.Filter) ([]*entity.Employee, error) {
-	token, err := r.Keycloak.Client.LoginAdmin(ctx, r.Keycloak.Username, r.Keycloak.Password, r.Keycloak.Realm)
-	if err != nil {
-		return nil, err
-	}
-	defer r.Keycloak.Client.LogoutUserSession(ctx, token.AccessToken, r.Keycloak.Realm, token.SessionState)
-
-	first := filter.Page * filter.PageSize
-	users, err := r.Keycloak.Client.GetUsers(
-		ctx,
-		token.AccessToken,
-		r.Keycloak.Realm,
-		gocloak.GetUsersParams{
-			FirstName: &filter.FirstName,
-			LastName:  &filter.LastName,
-			First:     &first,
-			Max:       &filter.PageSize,
-		},
-	)
-	if err != nil {
-		return nil, err
-	}
-
+func (r *Repository) SearchEmployees(ctx context.Context, filter *entity.Filter) (*string, []*entity.Employee, error) {
 	var employees []*entity.Employee
-	for _, u := range users {
-		var pis string
-		if u.Attributes != nil {
-			pis = (*u.Attributes)["pis"][0]
-		}
-		employee := &entity.Employee{
-			Username:      *u.Username,
-			FirstName:     *u.FirstName,
-			LastName:      *u.LastName,
-			Email:         *u.Email,
-			Pis:           pis,
-			Enabled:       *u.Enabled,
-			EmailVerified: *u.EmailVerified,
-		}
-		employee.ID = *u.ID
-		employee.CreatedAt = time.Unix(0, *u.CreatedTimestamp*int64(time.Millisecond))
-		employees = append(employees, employee)
+
+	q := r.P.Db.Order("token desc").Limit(filter.PageSize)
+
+	if filter.FirstName != "" {
+		q = q.Where("first_name = ?", filter.FirstName)
+	}
+	if filter.LastName != "" {
+		q = q.Where("last_name = ?", filter.LastName)
+	}
+	if filter.PageToken != "" {
+		q = q.Where("token < ?", filter.PageToken)
 	}
 
-	return employees, nil
+	err := q.Find(&employees).Error
+	if err != nil {
+		return nil, nil, err
+	}
+
+	length := len(employees)
+	var nextPageToken string
+	if length == filter.PageSize {
+		nextPageToken = *employees[length-1].Token
+	}
+
+	return &nextPageToken, employees, nil
 }
 
-func (r *Repository) UpdateEmployee(ctx context.Context, employee *entity.Employee) error {
-	token, err := r.Keycloak.Client.LoginAdmin(ctx, r.Keycloak.Username, r.Keycloak.Password, r.Keycloak.Realm)
-	if err != nil {
-		return err
-	}
-
-	user := gocloak.User{
-		ID:        &employee.ID,
-		FirstName: &employee.FirstName,
-		LastName:  &employee.LastName,
-		Email:     &employee.Email,
-	}
-	user.Attributes = utils.StructToAttr(employee)
-
-	err = r.Keycloak.Client.UpdateUser(ctx, token.AccessToken, r.Keycloak.Realm, user)
-	if err != nil {
-		return err
-	}
-
-	return nil
+func (r *Repository) SaveEmployee(ctx context.Context, employee *entity.Employee) error {
+	err := r.P.Db.Save(employee).Error
+	return err
 }
 
-func (r *Repository) PublishEmployeeEvent(ctx context.Context, msg, topic, key string) error {
+func (r *Repository) PublishEvent(ctx context.Context, msg, topic, key string) error {
 	message := &ckafka.Message{
 		TopicPartition: ckafka.TopicPartition{Topic: &topic, Partition: ckafka.PartitionAny},
 		Value:          []byte(msg),
